--- a/templates/index.tmpl.html
+++ b/templates/index.tmpl.html
@@ -71,7 +71,7 @@
         <footer class="page-footer">
         </footer>
     </body>
-    <script src="https://unpkg.com/vue@2.1.3/dist/vue.min.js"></script>
+    <script src="https://unpkg.com/vue"></script>
     <script src="https://cdn.jsdelivr.net/emojione/2.2.6/lib/js/emojione.min.js"></script>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/md5.js"></script>
@@ -98,7 +98,7 @@
                         + '</div>'
                         + emojione.toImage(msg.text) + '<br/>';
                     var element = document.getElementById('chat-messages');
-                    elemet.scrollTop = element.scrollHeight;
+                    element.scrollTop = element.scrollHeight;
                 });
             },
             methods: {
