--- a/templates/index.tmpl.html
+++ b/templates/index.tmpl.html
@@ -47,7 +47,7 @@
                     <input type="text" v-model="newMsg" @keyup.enter="send">
                 </div>
                 <div class="input-field col s4">
-                    <button class="waves-effect waves-light btn" @click="send">
+                    <button class="waves-effect waves-light btn" @click="send()">
                         <i class="material-icons right">chat</i>
                         Send
                     </button>
