Update to secure websocket used by heroku

--- a/templates/index.tmpl.html
+++ b/templates/index.tmpl.html
@@ -13,7 +13,7 @@
 		</div>
 		<script type="text/javascript">
 			var socket = null;
-            var uri = 'ws://' + window.location.host + '/api/alpha/auth/socket/{{.token}}'
+            var uri = 'wss://' + window.location.host + '/api/alpha/auth/socket/{{.token}}'
 
             window.onload = function() {
                 console.log('window onload');
