--- a/templates/temp.tmpl.html
+++ b/templates/temp.tmpl.html
@@ -89,7 +89,7 @@
             },
             created: function() {
                 var self = this;
-                this.ws = new WebSocket('ws://' + window.location.host + '/ws');
+                this.ws = new WebSocket('wss://' + window.location.host + '/ws');
                 this.ws.addEventListener('message', function(e) {
                     var msg = JSON.parse(e.data);
                     self.chatContent += '<div class="chip">'
