--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,7 @@
 <body>
   <div id="app">
     {{ message }}
+    <a href="http://localhost:9000/login">Login</a>
   </div>
 
 	<script src="https://cdn.jsdelivr.net/npm/vue"></script>
