--- a/templates/home.tmpl.html
+++ b/templates/home.tmpl.html
@@ -7,7 +7,7 @@
 <body>
   <div id="app">
     {{ message }}
-    <a href="http://localhost:9000/login">Login</a>
+    <a href="{(.login_url)}">Logout</a>
   </div>
 
 	<script src="https://cdn.jsdelivr.net/npm/vue"></script>
